--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "express-server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "openshift": "nodeshift --dockerImage=registry.access.redhat.com/ubi8/nodejs-18",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
